--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <script src="jquery.mobile-1.4.5/jquery-1.12.4.min.js"></script>
         <script src="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
+     <script src="cordova.js"></script>
         <script src="index.js"></script> 
     </head>
     
