--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
     
  <head>
+    <style>
+div.dice{
+	float:left;
+	width:32px;
+	background:#F5F5F5;
+	border:#999 1px solid;
+	padding:10px;
+	font-size:24px;
+	text-align:center;
+	margin:5px;
+}
+</style> 
         <meta charset="utf-8">
         
         <link rel="stylesheet" type="text/css" href="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.css">
