--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
  <head>
     <style>
-div.dice{
+div.dice{ <!––The div tag defines a section in the html document. Here I am defining the design of my dice––>
 	float:left;
 	width:32px;
 	background:#F5F5F5;
@@ -19,8 +19,9 @@ div.dice{
         <link rel="stylesheet" type="text/css" href="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.css">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <script src="jquery.mobile-1.4.5/jquery-1.12.4.min.js"></script>
-        <script src="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
-     <script src="cordova.js"></script>
+        <script src="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script> <!--Here I am adding an jQuery frame work to
+                                                                                make my app more mobile friendly and better looking-->
+     <script src="cordova.js"></script>                                          
      
         <script src="index.js"></script> 
     </head>
