--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ div.dice{ <!––The div tag defines a section in the html document. Here I am 
                                          dice staring on one-->
    
    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-   <button onclick="coinToss()">Flip a coin</button> <!--Here I am placing the button to flip the coin, notice how it says 'cointoss' next to onClick, that's the function to flip the coin--> 
+   <button onclick="coinToss()">Flip a coin</button> <!--Here I am placing the button to flip the coin, notice how it says 'cointoss'
+                                                                             next to onClick, that's the function to flip the coin--> 
    <img name="coin" src="Tails.png"> <!--And here I place the coin, starting on heads-->
    
    </body>
